# Cache-System

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  cache_system_docs.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
Schema/: README.md  cache_config.schema.json  cache_config_toml_container.schema.json  cache_entry_snapshot.schema.json  cache_stats_snapshot.schema.json  cli_state.schema.json  cli_state_entry.schema.json  policy_stats_snapshot.schema.json  schema_index.json  shard_stats_snapshot.schema.json  simulation_result.schema.json  worker_job.schema.json  worker_job_expire_shard.schema.json  worker_job_flush_write_back.schema.json  worker_job_preload_key.schema.json  worker_job_snapshot_stats.schema.json  worker_job_stop_worker.schema.json
configs/: default.toml  lfu_demo.toml  lru_demo.toml  write_back_demo.toml
docs/: architecture.md  benchmark_results.md  concurrency.md  scope_conformance.md  scope_summary.md  testing_strategy.md  workers.md  write_back_semantics.md
docs/adr/: 0001-cache-architecture.md  0002-ttl-expiration-model.md  0003-worker-queue-and-write-back.md  0004-cli-state-file-format.md  0005-concurrency-and-shutdown.md
examples/: basic_usage.py  concurrent_load.py  write_back_demo.py
src/cachelab/: __init__.py
tests/: conftest.py
tests/cli/: test_cli_basic_commands.py  test_cli_comprehensive.py  test_cli_demos.py  test_cli_smoke.py
tests/concurrency/: test_capacity_under_threads.py  test_hashing.py  test_sharded_cache.py  test_singleflight.py  test_stress.py
tests/integration/: test_cache_api.py  test_tombstones.py  test_write_back.py  test_write_back_versions.py  test_write_through.py
tests/teaching/: test_teaching_comprehensive.py  test_unsafe_examples_fail.py
tests/unit/: test_audit_fixes.py  test_benchmark.py  test_cache_comprehensive.py  test_config.py  test_config_comprehensive.py  test_exports_and_entry.py  test_fifo.py  test_lfu.py  test_lru.py  test_modules_comprehensive.py  (+7 more)
(+61 files in other folders)
